--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p class="p"> Привет! Опять исправляем ошибки </p>
+    <p class="p"> Вот и научился работать в GIT </p>
 </body>
 </html>
